# open-curtain-calc

./: .gitignore  GITHUB_PAGES_GUIDE.md  LICENSE  README.md  ROADMAP.md  gh-pages-config.yaml  preview-config.yaml  preview-demo.sh  preview.html  pyproject.toml  software-dashboard.html
backend/app/: main.py
backend/app/core/: config.py
